tohray is smol app; 256mb is enough

--- a/fly.toml
+++ b/fly.toml
@@ -22,6 +22,6 @@ primary_region = 'atl'
 
 [[vm]]
   size = 'shared-cpu-1x'
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
